--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         </h1>
         <h2>- Business Analyst | Chemical Engineer </h2>
         <p>
-          Hey! I am an analytical thinker with a strong passion for data science and business analytics. I enjoy uncovering insights from complex datasets and leveraging tools like Python, SQL, and Power BI to solve real-world problems. My curiosity drives me to explore how data can transform decision-making and improve processes. I thrive on creating impactful solutions, from building predictive models to designing intuitive dashboards. Beyond my technical interests, I value collaboration and continuous learning, always seeking opportunities to grow and adapt in the fast-evolving analytics landscape. My goal is to bridge technical expertise with strategic business insights to drive meaningful outcomes..
+         Hi there! I’m someone who thrives on uncovering the hidden stories within data. My passion for business analytics and data science stems from the thrill of solving complex problems and transforming raw numbers into meaningful insights. Whether it’s crafting predictive models, visualizing trends with tools like Python and Power BI, or refining strategies through SQL-driven analysis, I love turning data into actionable results.
+
+What truly excites me is the potential to make an impact—whether it’s streamlining processes, guiding smarter decisions, or driving innovation. For me, analytics isn’t just a technical endeavor; it’s a creative journey that combines curiosity, strategy, and collaboration.
+
+I’m a firm believer in lifelong learning and value working alongside others who share a passion for growth. By bridging technical expertise with strategic thinking, I aim to contribute solutions that are not only effective but transformative. It’s this blend of curiosity, creativity, and purpose that fuels my journey in the dynamic world of analytics.
         </p>
         <button>My Work Track</button>
         <button>Projects</button>
